<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/authorizationMax"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/authorizationMax" />

    <Button
        android:id="@+id/authorizationMedium"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/authorizationMedium" />

    <Button
        android:id="@+id/authorizationMin"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/authorizationMin" />
</LinearLayout>