<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="-70dp"
        android:gravity="center_horizontal"
        android:hint="@string/Username"
        android:inputType="textEmailAddress">
        android:layout_alignParentBottom="true"

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/psw"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="67dp"
        android:gravity="center_horizontal"
        android:hint="@string/psw"
        android:inputType="textPassword">

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/imageDisplay"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/imgNFCRed"
        android:src="@drawable/nfcred" />

    <Button
        android:id="@+id/buttOk"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/signin" />


</LinearLayout>